--- a/tab-1/hakkimizda.html
+++ b/tab-1/hakkimizda.html
@@ -77,6 +77,12 @@
 
             </div>
         </div>
+								   <a href="../tab-1/hakkimizda-en.html" class="navbar-brand ms-lg-5">
+			<img class="img-fluid rounded" style="max-width: 250px;height: 1cm;" src="../img/english.png" alt="">
+        </a>
+			   <a href="../tab-1/hakkimizda.html" class="navbar-brand ms-lg-5">
+			<img class="img-fluid rounded" style="max-width: 250px;height: 1cm;" src="../img/turkish.png" alt="">
+        </a>
     </nav>
     <!-- Navbar End -->
 
