--- a/tab-2/denetim-ve-guvence-en.html
+++ b/tab-2/denetim-ve-guvence-en.html
@@ -33,8 +33,8 @@
 
 <body>
     <!-- Navbar Start -->
-          <nav class="navbar navbar-expand-lg bg-white navbar-light shadow-sm py-3 py-lg-0 px-3 px-lg-0">
-        <a href="../index.html" class="navbar-brand ms-lg-5">
+             <nav class="navbar navbar-expand-lg bg-white navbar-light shadow-sm py-3 py-lg-0 px-3 px-lg-0">
+        <a href="../index-en.html" class="navbar-brand ms-lg-5">
 			<img class="img-fluid rounded" style="max-width: 250px;height: 1cm;" src="../img/sirketlogoakc_transparent.png" alt="">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
@@ -44,43 +44,43 @@
   <div class="navbar-nav mx-auto py-0">
   				<div class="dropdown">
 										<div class="d-flex justify-content-between">
-      <a href="../tab-1/hakkimizda.html" class="nav-link" >Hakkımızda</a>
+       <a href="../tab-1/hakkimizda.html" class="nav-link" >About Us</a>
 </div>
 </div>
 				   <div class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Hizmetlerimiz</a>
+                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Services</a>
                     <div class="dropdown-menu m-0">
-                         <a href="../tab-2/denetim-ve-guvence.html" class="dropdown-item">Denetim ve Güvence</a>
-                        <a href="../tab-2/vergi-danismanligi.html" class="dropdown-item">Vergi Danışmanlığı</a>
-                        <a href="../tab-2/finansal-danismanlik.html" class="dropdown-item">Finansal Danışmanlık</a>
-						<a href="../tab-2/enflasyon-muhasebesi.html" class="dropdown-item">Enflasyon Muhasebesi</a>
+                         <a href="../tab-2/denetim-ve-guvence-en.html" class="dropdown-item">Audit and Assurance Services</a>
+                        <a href="../tab-2/vergi-danismanligi-en.html" class="dropdown-item">Tax Services</a>
+                        <a href="../tab-2/finansal-danismanlik-en.html" class="dropdown-item">Financial Consulting</a>
+						<a href="../tab-2/enflasyon-muhasebesi-en.html" class="dropdown-item">IAS 29 Accounting</a>
                     </div>
                 </div>
 					   <div class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Duyurular</a>
+                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Newsroom</a>
                     <div class="dropdown-menu m-0">
-                        <a href="../tab-3/bagimsiz-denetim-duyurulari.html" class="dropdown-item">Bağımsız Denetim Duyuruları</a>
-                        <a href="../tab-3/vergi-sirkuleri.html" class="dropdown-item">Vergi Sirkülerleri</a>
-                        <a href="../tab-3/seffaflik-raporu.html" class="dropdown-item">Şeffaflık Raporu</a>
+                        <a href="../tab-3/bagimsiz-denetim-duyurulari-en.html" class="dropdown-item">Audit</a>
+                        <a href="../tab-3/vergi-sirkuleri-en.html" class="dropdown-item">Tax</a>
+                        <a href="../tab-3/seffaflik-raporu-en.html" class="dropdown-item">Transparency Report</a>
                     </div>
                 </div>
 				  				<div class="dropdown">
 										<div class="d-flex justify-content-between">
-      <a href="../tab-4/kariyer-firsatlari.html" class="nav-link" >Kariyer Fırsatları</a>
+      <a href="../tab-4/kariyer-firsatlari-en.html" class="nav-link" >Careers</a>
 </div>
 </div>
   				<div class="dropdown">
 										<div class="d-flex justify-content-between">
-      <a href="../tab-5/iletisim.html" class="nav-link" >İletişim</a>
+      <a href="../tab-5/iletisim-en.html" class="nav-link" >Contact US</a>
 </div>
 </div>
 
             </div>
         </div>
-			   <a href="../tab-2/enflasyon-muhasebesi-en.html" class="navbar-brand ms-lg-5">
+			   <a href="../tab-2/denetim-ve-guvence-en.html" class="navbar-brand ms-lg-5">
 			<img class="img-fluid rounded" style="max-width: 250px;height: 1cm;" src="../img/english.png" alt="">
         </a>
-			   <a href="../tab-2/enflasyon-muhasebesi.html" class="navbar-brand ms-lg-5">
+			   <a href="../tab-2/denetim-ve-guvence.html" class="navbar-brand ms-lg-5">
 			<img class="img-fluid rounded" style="max-width: 250px;height: 1cm;" src="../img/turkish.png" alt="">
         </a>
     </nav>
@@ -104,11 +104,11 @@
 	        <div class="row g-5">
             <div class="container">
   <div class="image-container">
-    <img class="img-fluid" src="../img/tab2/Vergi-Danismanligi-Kategori-scaled.jpg" alt="">
+    <img class="img-fluid" src="../img/tab1/DenetimVeGunvece.jpg" alt="">
     <div class="overlay"></div>
     <div class="text">
-      <h2 style ="color: honeydew;font-family: 'Open Sans';">Enflasyon Muhasebesi</h2>
-	  <!-- <p style ="color: honeydew;font-family: 'Open Sans';">Vergi alanında sahip olduğumuz yerel ve global bilgi birikimini özgün çözümlerimizle sunarak, şirketinizin verimliliğinin arttırılmasına ve risklerinin azaltılmasına katkı sağlıyoruz</p> -->
+      <h2 style ="color: honeydew;font-family: 'Open Sans';">Audit and Assurance Services</h2>
+	  <!-- <p style ="color: honeydew;font-family: 'Open Sans';">Denetim ve güvence hizmetlerimizle iş hayatında ve toplumda güven oluşturmaya, kontrol mekanizmaları geliştirmeye , finansal sorunlara çözüm üretmeye destek oluyoruz</p> -->
     </div>
   </div>
 </div>
@@ -121,23 +121,26 @@
 				<hr style =" border: none; /* Çizginin kenarlık olmamasını sağlar */
             height: 3px; /* Çizginin yüksekliği */
             background-color: black; /* Çizginin arka plan rengi */">
-                    <h2 style="text-align: center;">Hizmet Kapsamı</h2>
+                    <h2 style="text-align: center;">Scope of Service</h2>
 					<div class="vc_row wpb_row vc_inner vc_row-fluid vc_custom_1634005714433"><div class="wpb_column vc_column_container vc_col-sm-8 vc_col-lg-offset-2"><div class="vc_column-inner"><div class="wpb_wrapper">
 	<div class="wpb_text_column wpb_content_element  vc_custom_1636650504565">
 		<div class="wpb_wrapper">
-<p>Türkiye Finansal Raporlama Standartları ile Büyük ve Orta Boy İşletmeler İçin Finansal Raporlama Standardı (BOBİ FRS) uygulayan işletmelerin <b>31 Aralık 2023</b> tarihinde veya sonrasında sona eren yıllık raporlama dönemine ait finansal tablolarının
- “Türkiye Muhasebe Standardı 29 Yüksek Enflasyonlu Ekonomilerde Finansal Raporlama” ile “BOBİ FRS Bölüm 25 Yüksek Enflasyonlu Ekonomilerde Finansal Raporlama”da yer alan ilgili muhasebe ilkelerine uygun olarak enflasyon etkisine göre düzeltilerek sunulması gerekmektedir.</p>
- </br>
-<p> AKC Bağımsız Denetim A.Ş. olarak, profesyonel kadromuz ile IFRS enflasyon muhasebesi danışmanlığı hizmeti vermekteyiz.</p>
+<p>Akc Bağımsız Denetim A.Ş., with its expert and strong staff in its field, provides independent audit services that are valid all over the world, in compliance with all standards, according to the financial structure of the companies and the legislation they are bound by. </p>
+
 </br>
-<p> Konu ile alakalı daha fazla bilgi edinmek için aşağıdaki irtibat numaralarından bizlere ulaşabilirsiniz</p>
 </br>
-<p> Hüseyin Akcan, Ortak</p>
-<p> +90 (212) 447 64 60</p>
-<p> info@akcdenetim.com</p>
+<p>The scope of independent audit services offered by AKC is as follows;</p>
+<p><img decoding="async" class="alignnone wp-image-5061" src="../img/madde.png" alt="" width="21" height="21"> Independent audits carried out in accordance with Turkish Financial Reporting and Accounting Standards (TFRS / TMS)</p>
+<p><img decoding="async" class="alignnone wp-image-5061" src="../img/madde.png" alt="" width="21" height="21"> Independent audits carried out in accordance with Turkish Financial Reporting Standards for Large and Medium-Sized Enterprises (BOBİ FRS)</p>
+<p><img decoding="async" class="alignnone wp-image-5061" src="../img/madde.png" alt="" width="21" height="21"> Independent audits carried out in accordance with International Financial Reporting Standards (IFRS)</p>
+<p><img decoding="async" class="alignnone wp-image-5061" src="../img/madde.png" alt="" width="21" height="21"> Independent audits performed in accordance with the Accounting and Financial Reporting Standard Accepted in the United States of America (US GAAP)</p>
+<p><img decoding="async" class="alignnone wp-image-5061" src="../img/madde.png" alt="" width="21" height="21"> BRSA Independent Assurance Audit</p>
+<p><img decoding="async" class="alignnone wp-image-5061" src="../img/madde.png" alt="" width="21" height="21"> Internal audit</p>
+<p><img decoding="async" class="alignnone wp-image-5061" src="../img/madde.png" alt="" width="21" height="21"> Cheating (Abuse) Auditing</p>
+<p><img decoding="async" class="alignnone wp-image-5061" src="../img/madde.png" alt="" width="21" height="21"> Conducting Common Area and Turnover Based Customer Audit of Shopping Malls</p>
 		</div>
 	</div>
-<div class=" ubtn-ctn-center "><a class="ubtn-link ult-adjust-bottom-margin ubtn-center ubtn-large " href="../tab-5/iletisim.html" title="İletişim"><button type="button" id="ubtn-5812" class="ubtn ult-adjust-bottom-margin ult-responsive ubtn-large ubtn-no-hover-bg  none  ubtn-center   tooltip-64627dd91b8e7" data-hover="" data-border-color="" data-bg="#e23456" data-hover-bg="#c42d55" data-border-hover="" data-shadow-hover="" data-shadow-click="none" data-shadow="" data-shd-shadow="" data-ultimate-target="#ubtn-5812" data-responsive-json-new="{&quot;font-size&quot;:&quot;desktop:14px;&quot;,&quot;line-height&quot;:&quot;desktop:20px;&quot;}" style="font-weight:bold;border-radius:50px;border-width:px;border-color:;border-style:solid;background: #e23456;color: #ffffff;"><span class="ubtn-hover" style="background-color:#c42d55"></span><span class="ubtn-data ubtn-text ">İletişime Geç</span></button></a></div></div></div></div></div>
+<div class=" ubtn-ctn-center "><a class="ubtn-link ult-adjust-bottom-margin ubtn-center ubtn-large " href="../tab-5/iletisim-en.html" title="İletişim"><button type="button" id="ubtn-5812" class="ubtn ult-adjust-bottom-margin ult-responsive ubtn-large ubtn-no-hover-bg  none  ubtn-center   tooltip-64627dd91b8e7" data-hover="" data-border-color="" data-bg="#e23456" data-hover-bg="#c42d55" data-border-hover="" data-shadow-hover="" data-shadow-click="none" data-shadow="" data-shd-shadow="" data-ultimate-target="#ubtn-5812" data-responsive-json-new="{&quot;font-size&quot;:&quot;desktop:14px;&quot;,&quot;line-height&quot;:&quot;desktop:20px;&quot;}" style="font-weight:bold;border-radius:50px;border-width:px;border-color:;border-style:solid;background: #e23456;color: #ffffff;"><span class="ubtn-hover" style="background-color:#c42d55"></span><span class="ubtn-data ubtn-text ">Contact Us</span></button></a></div></div></div></div></div>
                 </div>
                 <!-- Blog Detail End -->
             </div>
@@ -147,21 +150,21 @@
 
 
     <!-- Footer Start -->
-    <div class="container-fluid bg-dark text-light mt-5 py-5 wow fadeInUp" data-wow-delay="0.1s">
+        <div class="container-fluid bg-dark text-light mt-5 py-5 wow fadeInUp" data-wow-delay="0.1s">
         <div class="container pt-5">
             <div class="row g-5">
                 <div class="col-lg-6 col-md-6">
-                    <h3 class="text-white mb-4">Menü</h3>
+                    <h3 class="text-white mb-4">Menu</h3>
                     <div class="d-flex flex-column justify-content-start">
-                        <a class="text-light mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Hakkımızda</a>
-                        <a class="text-light mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Hizmetlerimiz</a>
-                        <a class="text-light mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Duyurular</a>
-                        <a class="text-light mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Kariyer Fırsatları</a>
-						<a class="text-light mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>İletişim</a>
+                        <a class="text-light mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>About Us</a>
+                        <a class="text-light mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Services</a>
+                        <a class="text-light mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Newsroom</a>
+                        <a class="text-light mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Careers</a>
+						<a class="text-light mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Contact US</a>
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-6">
-                    <h3 class="text-white mb-4">İletişim</h3>
+                    <h3 class="text-white mb-4">Contact US</h3>
                     <p class="mb-2"><i class="bi bi-geo-alt text-primary me-2"></i>Başkule Plaza , İnönü Caddesi, Göztepe Mah.</p>
 					<p class="mb-2">No:122  K:8  D:35 Bağcılar/İstanbul</p>
                     <p class="mb-2"><i class="bi bi-envelope-open text-primary me-2"></i>info@akcdenetim.com</p>
@@ -171,7 +174,7 @@
                     <form class="mx-auto" style="max-width: 600px;">
                         <div class="input-group">
                             <input type="text" class="form-control border-white p-3" placeholder="E-mail">
-                            <button class="btn btn-primary px-4">Abone Olun!</button>
+                            <button class="btn btn-primary px-4">Subscribe</button>
                         </div>
                     </form>
                 </div>
@@ -182,7 +185,7 @@
         <div class="container">
             <div class="row g-5">
                 <div class="col-md-6 text-center text-md-start">
-                    <p class="mb-md-0">&copy; <a class="text-white border-bottom" href="#">AKC DENETIM</a>. © 2023 Tüm Hakları Saklıdır.</p>
+                    <p class="mb-md-0">&copy; <a class="text-white border-bottom" href="#">AKC DENETIM</a>. © 2023 All Rights Reserved.</p>
                 </div>
             </div>
         </div>
