--- a/index-en.html
+++ b/index-en.html
@@ -44,34 +44,34 @@
   <div class="navbar-nav mx-auto py-0">
   				<div class="dropdown">
 										<div class="d-flex justify-content-between">
-      <a href="tab-1/hakkimizda.html" class="nav-link" >About Us</a>
+      <a href="tab-1/hakkimizda-en.html" class="nav-link" >About Us</a>
 </div>
 </div>
 				   <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Services</a>
                     <div class="dropdown-menu m-0">
-                        <a href="tab-2/denetim-ve-guvence.html" class="dropdown-item">Audit and Assurance Services</a>
-                        <a href="tab-2/vergi-danismanligi.html" class="dropdown-item">Tax Services</a>
-                        <a href="tab-2/finansal-danismanlik.html" class="dropdown-item">Financial Consulting</a>
-						<a href="tab-2/enflasyon-muhasebesi.html" class="dropdown-item">IAS 29 Accounting</a>
+                        <a href="tab-2/denetim-ve-guvence-en.html" class="dropdown-item">Audit and Assurance Services</a>
+                        <a href="tab-2/vergi-danismanligi-en.html" class="dropdown-item">Tax Services</a>
+                        <a href="tab-2/finansal-danismanlik-en.html" class="dropdown-item">Financial Consulting</a>
+						<a href="tab-2/enflasyon-muhasebesi-en.html" class="dropdown-item">IAS 29 Accounting</a>
                     </div>
                 </div>
 					   <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Newsroom</a>
                     <div class="dropdown-menu m-0">
-                        <a href="tab-3/bagimsiz-denetim-duyurulari.html" class="dropdown-item">Audit</a>
-                        <a href="tab-3/vergi-sirkuleri.html" class="dropdown-item">Tax</a>
-                        <a href="tab-3/seffaflik-raporu.html" class="dropdown-item">Transparency Report</a>
+                        <a href="tab-3/bagimsiz-denetim-duyurulari-en.html" class="dropdown-item">Audit</a>
+                        <a href="tab-3/vergi-sirkuleri-en.html" class="dropdown-item">Tax</a>
+                        <a href="tab-3/seffaflik-raporu-en.html" class="dropdown-item">Transparency Report</a>
                     </div>
                 </div>
 				  				<div class="dropdown">
 										<div class="d-flex justify-content-between">
-      <a href="tab-4/kariyer-firsatlari.html" class="nav-link" >Careers</a>
+      <a href="tab-4/kariyer-firsatlari-en.html" class="nav-link" >Careers</a>
 </div>
 </div>
   				<div class="dropdown">
 										<div class="d-flex justify-content-between">
-      <a href="tab-5/iletisim.html" class="nav-link" >Contact US</a>
+      <a href="tab-5/iletisim-en.html" class="nav-link" >Contact US</a>
 </div>
 </div>
 
@@ -147,8 +147,8 @@
     <div class="container-fluid py-5 wow fadeInUp" data-wow-delay="0.1s">
         <div class="container">
             <div class="text-center mx-auto mb-5" style="max-width: 600px;">
-                <h5 class="text-primary text-uppercase" style="letter-spacing: 5px;">Neler Yapıyoruz</h5>
-                <h1 class="display-5 mb-0">AKC Denetim Size Nasıl Yardımcı Olabilir?</h1>
+                <h5 class="text-primary text-uppercase" style="letter-spacing: 5px;">What We Do</h5>
+                <h1 class="display-5 mb-0">How Can AKC Help You?</h1>
             </div>
             <div class="row g-5">
 			     <a href="tab-2/denetim-ve-guvence.html" class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.9s">
@@ -203,11 +203,11 @@
 
 
     <!-- Footer Start -->
-             <div class="container-fluid bg-dark text-light mt-5 py-5 wow fadeInUp" data-wow-delay="0.1s">
+      <div class="container-fluid bg-dark text-light mt-5 py-5 wow fadeInUp" data-wow-delay="0.1s">
         <div class="container pt-5">
             <div class="row g-5">
                 <div class="col-lg-6 col-md-6">
-                    <h3 class="text-white mb-4">Menü</h3>
+                    <h3 class="text-white mb-4">Menu</h3>
                     <div class="d-flex flex-column justify-content-start">
                         <a class="text-light mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>About Us</a>
                         <a class="text-light mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Services</a>
@@ -227,7 +227,7 @@
                     <form class="mx-auto" style="max-width: 600px;">
                         <div class="input-group">
                             <input type="text" class="form-control border-white p-3" placeholder="E-mail">
-                            <button class="btn btn-primary px-4">Abone Olun!</button>
+                            <button class="btn btn-primary px-4">Subscribe</button>
                         </div>
                     </form>
                 </div>
@@ -238,7 +238,7 @@
         <div class="container">
             <div class="row g-5">
                 <div class="col-md-6 text-center text-md-start">
-                    <p class="mb-md-0">&copy; <a class="text-white border-bottom" href="#">AKC DENETIM</a>. © 2023 Tüm Hakları Saklıdır.</p>
+                    <p class="mb-md-0">&copy; <a class="text-white border-bottom" href="#">AKC DENETIM</a>. © 2023 All Rights Reserved.</p>
                 </div>
             </div>
         </div>
