--- a/tab-4/kariyer-firsatlari-en.html
+++ b/tab-4/kariyer-firsatlari-en.html
@@ -33,8 +33,8 @@
 
 <body>
     <!-- Navbar Start -->
-           <nav class="navbar navbar-expand-lg bg-white navbar-light shadow-sm py-3 py-lg-0 px-3 px-lg-0">
-        <a href="../index.html" class="navbar-brand ms-lg-5">
+  <nav class="navbar navbar-expand-lg bg-white navbar-light shadow-sm py-3 py-lg-0 px-3 px-lg-0">
+        <a href="../index-en.html" class="navbar-brand ms-lg-5">
 			<img class="img-fluid rounded" style="max-width: 250px;height: 1cm;" src="../img/sirketlogoakc_transparent.png" alt="">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
@@ -44,34 +44,34 @@
   <div class="navbar-nav mx-auto py-0">
   				<div class="dropdown">
 										<div class="d-flex justify-content-between">
-      <a href="../tab-1/hakkimizda.html" class="nav-link" >Hakkımızda</a>
+       <a href="../tab-1/hakkimizda.html" class="nav-link" >About Us</a>
 </div>
 </div>
 				   <div class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Hizmetlerimiz</a>
+                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Services</a>
                     <div class="dropdown-menu m-0">
-                         <a href="../tab-2/denetim-ve-guvence.html" class="dropdown-item">Denetim ve Güvence</a>
-                        <a href="../tab-2/vergi-danismanligi.html" class="dropdown-item">Vergi Danışmanlığı</a>
-                        <a href="../tab-2/finansal-danismanlik.html" class="dropdown-item">Finansal Danışmanlık</a>
-						<a href="../tab-2/enflasyon-muhasebesi.html" class="dropdown-item">Enflasyon Muhasebesi</a>
+                         <a href="../tab-2/denetim-ve-guvence-en.html" class="dropdown-item">Audit and Assurance Services</a>
+                        <a href="../tab-2/vergi-danismanligi-en.html" class="dropdown-item">Tax Services</a>
+                        <a href="../tab-2/finansal-danismanlik-en.html" class="dropdown-item">Financial Consulting</a>
+						<a href="../tab-2/enflasyon-muhasebesi-en.html" class="dropdown-item">IAS 29 Accounting</a>
                     </div>
                 </div>
 					   <div class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Duyurular</a>
+                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Newsroom</a>
                     <div class="dropdown-menu m-0">
-                        <a href="../tab-3/bagimsiz-denetim-duyurulari.html" class="dropdown-item">Bağımsız Denetim Duyuruları</a>
-                        <a href="../tab-3/vergi-sirkuleri.html" class="dropdown-item">Vergi Sirkülerleri</a>
-                        <a href="../tab-3/seffaflik-raporu.html" class="dropdown-item">Şeffaflık Raporu</a>
+                        <a href="../tab-3/bagimsiz-denetim-duyurulari-en.html" class="dropdown-item">Audit</a>
+                        <a href="../tab-3/vergi-sirkuleri-en.html" class="dropdown-item">Tax</a>
+                        <a href="../tab-3/seffaflik-raporu-en.html" class="dropdown-item">Transparency Report</a>
                     </div>
                 </div>
 				  				<div class="dropdown">
 										<div class="d-flex justify-content-between">
-      <a href="../tab-4/kariyer-firsatlari.html" class="nav-link" >Kariyer Fırsatları</a>
+      <a href="../tab-4/kariyer-firsatlari-en.html" class="nav-link" >Careers</a>
 </div>
 </div>
   				<div class="dropdown">
 										<div class="d-flex justify-content-between">
-      <a href="../tab-5/iletisim.html" class="nav-link" >İletişim</a>
+      <a href="../tab-5/iletisim-en.html" class="nav-link" >Contact US</a>
 </div>
 </div>
 
@@ -102,8 +102,8 @@
 <div class="container-fluid py-5 wow fadeInUp" data-wow-delay="0.1s">
     <div class="container">
         <div class="text-center mx-auto mb-5" style="max-width: 600px;">
-            <h5 class="text-primary text-uppercase" style="letter-spacing: 5px;">AKC DENETİM</h5>
-            <h1 class="display-5 mb-0">Kariyer Fırsatları</h1>
+            <h5 class="text-primary text-uppercase" style="letter-spacing: 5px;">AKC</h5>
+            <h1 class="display-5 mb-0">Career Opportunities</h1>
         </div>
         <div class="row g-5">
             <div class="col-lg-6 wow slideInUp" data-wow-delay="0.3s">
@@ -113,8 +113,8 @@
             </div>
             <div class="col-lg-6 wow slideInUp" data-wow-delay="0.6s">
                 <div class="bg-light rounded p-5 d-flex flex-column justify-content-center align-items-center" style="height: 100%;">
-                    <p style="font-size: 18px; text-align: center;">Siz de AKC ailesine katılmak istiyorsanız, Kariyer.Net'teki ilanlarımızı takip edebilirsiniz.</p>
-                    <p style="font-size: 18px; text-align: center;">Ayrıca info@akcdenetim.com adresine mail atabilirsiniz.</p>
+                    <p style="font-size: 18px; text-align: center;">If you want to join the AKC family, you can follow our announcements on Kariyer.Net.</p>
+                    <p style="font-size: 18px; text-align: center;">You can also send an e-mail to info@akcdenetim.com.</p>
                 </div>
             </div>
         </div>
@@ -130,17 +130,17 @@
         <div class="container pt-5">
             <div class="row g-5">
                 <div class="col-lg-6 col-md-6">
-                    <h3 class="text-white mb-4">Menü</h3>
+                    <h3 class="text-white mb-4">Menu</h3>
                     <div class="d-flex flex-column justify-content-start">
-                        <a class="text-light mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Hakkımızda</a>
-                        <a class="text-light mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Hizmetlerimiz</a>
-                        <a class="text-light mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Duyurular</a>
-                        <a class="text-light mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Kariyer Fırsatları</a>
-						<a class="text-light mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>İletişim</a>
+                        <a class="text-light mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>About Us</a>
+                        <a class="text-light mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Services</a>
+                        <a class="text-light mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Newsroom</a>
+                        <a class="text-light mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Careers</a>
+						<a class="text-light mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Contact US</a>
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-6">
-                    <h3 class="text-white mb-4">İletişim</h3>
+                    <h3 class="text-white mb-4">Contact US</h3>
                     <p class="mb-2"><i class="bi bi-geo-alt text-primary me-2"></i>Başkule Plaza , İnönü Caddesi, Göztepe Mah.</p>
 					<p class="mb-2">No:122  K:8  D:35 Bağcılar/İstanbul</p>
                     <p class="mb-2"><i class="bi bi-envelope-open text-primary me-2"></i>info@akcdenetim.com</p>
@@ -150,7 +150,7 @@
                     <form class="mx-auto" style="max-width: 600px;">
                         <div class="input-group">
                             <input type="text" class="form-control border-white p-3" placeholder="E-mail">
-                            <button class="btn btn-primary px-4">Abone Olun!</button>
+                            <button class="btn btn-primary px-4">Subscribe</button>
                         </div>
                     </form>
                 </div>
@@ -161,7 +161,7 @@
         <div class="container">
             <div class="row g-5">
                 <div class="col-md-6 text-center text-md-start">
-                    <p class="mb-md-0">&copy; <a class="text-white border-bottom" href="#">AKC DENETIM</a>. © 2023 Tüm Hakları Saklıdır.</p>
+                    <p class="mb-md-0">&copy; <a class="text-white border-bottom" href="#">AKC DENETIM</a>. © 2023 All Rights Reserved.</p>
                 </div>
             </div>
         </div>
