--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <title>AKC DENETIM</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="Free HTML Templates" name="keywords">
-    <meta content="Free HTML Templates" name="description">
+    <meta content="AKC DENETIM" name="keywords">
+    <meta content="AKC DENETIM" name="description">
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
