--- a/index-en.html
+++ b/index-en.html
@@ -6,7 +6,7 @@
     <title>AKC DENETIM</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="AKC DENETIM" name="keywords">
-    <meta content="AKC DENETIM" name="description">
+    <!-- <meta content="AKC DENETIM" name="description"> -->
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
